# clfft-image

./: CLFFT.cc  CLPlatform.cc  CMakeLists.txt  FileReader.h  PixelArray.h  README.md
EliteProgramQualificationExam/: a.cc  b.cc  c.cc  d.cc  e.cc  f.cc
cmake/: FindclFFT.cmake
parallel-computing/: .gitignore  CLContext.cc  CLContext.h  CLFFT.cc  CLFFT.h  CLPlatform.cc  CLPlatform.h  CMakeLists.txt  FileReader.cc  assignment-1.cpp  assignment-3a.cpp  assignment-3b.cpp  kernel.cl  pfft.cc  report.tex
parallel-computing/cmake/: Findpng++.cmake
parallel-computing/misc/: assignment-2.cpp  assignment-3.5.cpp  assignment-4.cpp  assignment-5.cpp  assignment-6.cpp
